--- a/package.json
+++ b/package.json
@@ -20,12 +20,26 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install",
+    
+    "commitlint": "commitlint --config commitlint.config.js -e -V",
+    "json-server": "json-server __json_server_mock__/db.json --watch"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-customizable"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hehe19950110/jira.git"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "prettier"
     ]
   },
   "browserslist": {
@@ -39,5 +53,26 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.1",
+    "json-server": "^0.17.0",
+    "lint-staged": ">=10",
+    "prettier": "2.7.1"
+  },
+  "lint-staged": {
+    "*.{js,css,md,ts,tsx}": ["prettier --write","git add"]
+  },
+  
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
+  
+  
 }
