--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "commitlint": "commitlint --config commitlint.config.js -e -V",
-    "json-server": "json-server __json_server_mock__/db.json --watch --port 8080"
+    "json-server": "json-server __json_server_mock__/db.json --watch --port 8080 --middlewares ./__json_server_mock__/middleware.js"
   },
   "config": {
     "commitizen": {
