fix: 修改登录域名

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^4.23.6",
     "craco-less": "^2.0.0",
     "jira-dev-tool": "^1.7.61",
+    "moment": "2.18.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
