--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^18.0.6",
     "antd": "^4.23.6",
     "craco-less": "^2.0.0",
-    "jira-dev-tool": "^1.7.61",
+    "dayjs": "^1.11.5",
+    "jira-dev-tool": "^1.6.59",
     "moment": "2.18.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-router": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
