--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "antd": "^4.23.6",
+    "babel-plugin-import": "^1.13.5",
     "craco-less": "^2.0.0",
     "dayjs": "^1.11.5",
     "jira-dev-tool": "^1.6.59",
+    "less-loader": "7.3.0",
     "moment": "2.18.1",
     "qs": "^6.11.0",
     "react": "^18.2.0",
@@ -68,11 +70,13 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/qs": "^6.9.7",
+    "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "json-server": "^0.17.0",
     "lint-staged": ">=10",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "react-app-rewired": "^2.2.1"
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": [
