--- a/package.json
+++ b/package.json
@@ -1,53 +1,49 @@
 {
-  "name": "jira-3",
+  "name": "jira",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.4.5",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.65",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "antd": "^4.23.6",
-    "babel-plugin-import": "^1.13.5",
-    "craco-less": "^2.0.0",
-    "dayjs": "^1.11.5",
-    "jira-dev-tool": "^1.6.59",
-    "less-loader": "7.3.0",
-    "moment": "2.18.1",
-    "qs": "^6.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.2",
-    "react-router": "^6.4.2",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "@craco/craco": "^6.0.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@welldone-software/why-did-you-render": "^6.0.5",
+    "antd": "^4.9.4",
+    "craco-less": "^1.17.1",
+    "dayjs": "^1.9.7",
+    "history": "5",
+    "jira-dev-tool": "1.6.59",
+    "qs": "^6.9.4",
+    "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-query": "^3.5.10",
+    "react-router-dom": "6",
+    "react-scripts": "4.0.0",
+    "typescript": "~4.0.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
-    "prepare": "husky install",
-    "commitlint": "commitlint --config commitlint.config.js -e -V",
-    "json-server": "json-server __json_server_mock__/db.json --watch --port 8080 --middlewares ./__json_server_mock__/middleware.js"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-customizable"
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hehe19950110/jira.git"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -r git@github.com:sindu12jun/sindu12jun.github.io.git -b main",
+    "prepare": "husky install"
   },
   "eslintConfig": {
+    "rules": {
+      "@typescript-eslint/no-unused-vars": "off"
+    },
     "extends": [
       "react-app",
       "react-app/jest",
@@ -67,30 +63,20 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@types/qs": "^6.9.7",
-    "customize-cra": "^1.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
-    "json-server": "^0.17.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@testing-library/react-hooks": "^5.1.1",
+    "@types/qs": "^6.9.5",
+    "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-helmet": "^6.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "husky": ">=6",
+    "json-server": "^0.16.2",
     "lint-staged": ">=10",
-    "prettier": "2.7.1",
-    "react-app-rewired": "^2.2.1"
+    "msw": "^0.28.1",
+    "prettier": "^2.2.1"
   },
   "lint-staged": {
-    "*.{js,css,md,ts,tsx}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged --allow-empty",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "msw": {
-    "workerDirectory": "public"
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
