--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "antd": "^4.9.4",
     "craco-less": "^1.17.1",
     "dayjs": "^1.9.7",
-    "history": "5",
+    "history": "^5.3.0",
     "jira-dev-tool": "1.6.59",
     "qs": "^6.9.4",
     "react": "^17.0.1",
@@ -26,7 +26,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-query": "^3.5.10",
-    "react-router-dom": "6",
+    "react-router": "6",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "4.0.0",
     "typescript": "~4.0.5",
     "web-vitals": "^0.2.4"
