--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-query": "^3.5.10",
-    "react-router": "6",
+    "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "4.0.0",
     "typescript": "~4.0.5",
