--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r git@github.com:sindu12jun/sindu12jun.github.io.git -b main",
+    "deploy": "gh-pages -d build -r git@github.com:hehe19950110/jira.git -b main",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -71,6 +71,7 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-helmet": "^6.1.5",
     "eslint-config-prettier": "^6.15.0",
+    "gh-pages": "^4.0.0",
     "husky": ">=6",
     "json-server": "^0.16.2",
     "lint-staged": ">=10",
